force-app/main/default/objects/DispositionLead__c/DispositionLead__c.object-meta.xml
<CustomObject>
    <description>Each disposition event is stored as its own record so later events do not overwrite history.</description>
    <label>Disposition Lead</label>
    <nameField>
        <displayFormat>DL-{000000}</displayFormat>
        <label>Disposition Lead Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Disposition Leads</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>