force-app/main/default/objects/DispositionLead__c/fields/ContactId__c.field-meta.xml
<CustomField>
    <fullName>ContactId__c</fullName>
    <label>Contact ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>