force-app/main/default/objects/DispositionLead__c/fields/DispositionDateTime__c.field-meta.xml
<CustomField>
    <fullName>DispositionDateTime__c</fullName>
    <description>When the disposition occurred.</description>
    <label>Disposition Date/Time</label>
    <type>DateTime</type>
</CustomField>