force-app/main/default/objects/DispositionLead__c/fields/DispositionStatus__c.field-meta.xml
<CustomField>
    <fullName>DispositionStatus__c</fullName>
    <label>Disposition Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>