force-app/main/default/objects/DispositionLead__c/fields/Metric1__c.field-meta.xml
<CustomField>
    <fullName>Metric1__c</fullName>
    <label>Metric 1</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>