force-app/main/default/objects/DispositionLead__c/fields/Metric2__c.field-meta.xml
<CustomField>
    <fullName>Metric2__c</fullName>
    <label>Metric 2</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>