force-app/main/default/objects/DispositionLead__c/fields/Metric3__c.field-meta.xml
<CustomField>
    <fullName>Metric3__c</fullName>
    <label>Metric 3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>