force-app/main/default/objects/DispositionLead__c/fields/Zip__c.field-meta.xml
<CustomField>
    <fullName>Zip__c</fullName>
    <label>ZIP</label>
    <length>255</length>
    <type>Text</type>
</CustomField>